--- a/index.html
+++ b/index.html
@@ -60,6 +60,34 @@
       <div class="polygon"></div>
     </div>
 
+    <div class="ourobjectives">
+      <hr class="divider">
+      <div class="polygon2"></div>
+      <h2>Our Objectives</h2>
+      <div class="elements">
+        <div class="elements-row-1">
+          <div class="element"><p class="number">1</p><p class="ele-text">Introduce basic <br>financial concepts</p></div>
+          <div class="element"><p class="number">2</p><p class="ele-text">Teach how to <br>access financial services</p></div>
+          <div class="element"><p class="number">3</p><p class="ele-text">Encourage <br>building savings<br> & assets</p></div>
+        </div>
+        <div class="elements-row-2">
+          <div class="element"><p class="number">4</p><p class="ele-text">Support mindset in <br>overcoming vulnerability</div>
+          <div class="element"><p class="number">5</p><p class="ele-text">Urge planning <br>for economic security</div>
+          <div class="element"><p class="number">6</p><p class="ele-text">Share the value of<br> reciprocity and giving back</div>
+          <div class="element"><p class="number">7</p><p class="ele-text">Promote equality, fairness & justice</div>
+        </div>
+      </div>
+      <div class="quote">
+        <div class="quote-first-line">
+          <img src="img/image 2.png" id="left-quote">
+          <img src="img/Financial education can help to inculcate individuals with the financial knowledge necessary to create household budgets, initiate savings plans, and make strategic investment decisions. Such financial planning can help families meet near t.png", 
+          id="finance">
+          <img src='img/image 3.png' id="right-quote">
+        </div>
+        <img src="img/Alan Greenspan, 2002 American Economist.png" id="alan">
+      </div>
+    </div>
+
     <div class="getInvolved" id="getInvolved">
       <div class="getInvolvedText">
         <h2>Get Involved</h2>
